# eagle-mcp-server

./: .gitignore  README.md  main.py  pyproject.toml  server.py  test_fastmcp.py
docs/: index.html  openapi.json
resources/: application.py  folder.py  item.py  library.py  mcp.py
routes/: __init__.py  application.py  folder.py  item.py  library.py  mcp.py
schemas/: __init__.py  api.py  connect.py  folder.py  item.py  library.py  mcp.py
tools/: __init__.py  application.py  connection.py  folder.py  item.py  library.py
utils/: eagle_api.py
