[project]
name = "eagle-mcp-server"
version = "0.1.0"
description = "An MCP server for Eagle"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.6.0",
    "httpx>=0.28.1",
]

[project.scripts]
eagle-mcp-server = "main:main"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "server.py",
    "routes/",
    "schemas/", 
    "tools/",
    "utils/"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
