[project]
name = "eagle-mcp-server"
version = "0.1.0"
description = "An MCP server for Eagle"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
]

[project.scripts]
eagle-mcp-server = "main:run"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "server.py",
    "tools/",
    "utils/"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
